--- a/src/style/Question.css
+++ b/src/style/Question.css
@@ -3,10 +3,10 @@ article.question {
   flex-direction: column;
   background: #ffffff20;
   border-radius: 6px;
-  padding: 0.5rem;
+  padding: 1rem;
   row-gap: 0;
   max-height: min-content;
-  margin-top: 0.75rem;
+  /*margin-top: 0.75rem;*/
   border: 1px solid #ffffff21;
   box-shadow: 0px 4px 8px #000000cc;
   /*flex: 1 1 100%;*/
